tests/baselines/reference/jsFileCompilationTypeAssertions.errors.txt
tests/cases/compiler/a.js(1,27): error TS17002: Expected corresponding JSX closing tag for 'string'.


==== tests/cases/compiler/a.js (1 errors) ====
    var v = <string>undefined;
                              
!!! error TS17002: Expected corresponding JSX closing tag for 'string'.